--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 server.compression.enabled=true
 server.compression.mime-types=application/html,application/x-javascript,application/javascript,application/json,application/xml,application/xhtml+xml,application/rss+xml,text/html,text/xml,text/css,text/javascript,text/plain
 server.compression.min-response-size=1024
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto=none
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/estoque
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.messages.encoding=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.data.rest.base-path=rest
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.packagesToScan=br.com.estoque.web.controller
+springdoc.swagger-ui.operationsSorter=method
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://localhost:5432/estoque
+spring.flyway.user=postgres
+spring.flyway.password=123
